# type_fighter

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SESSION_STATE.md  TypeFighter.spec  achievements.md  build_type_fighter.bat  build_type_fighter_nuitka.bat  build_type_fighter_with_installer.bat  build_version.json  cheats.md  codex.txt  danger_fixes.md  licenses.md  licenses_and_credits.md  needed_highscores.md  peer-review.md  players.json  pyproject.toml  special_args.md  suggestions.md  time-warp-example.py
dev_tools/: generate_lesson_audio.ps1  migrate_players_json_to_server_sqlite.py  set_hf_cache.ps1  tts.py  tts_to_wav_ai.py
installer/: type_fighter_installer.nsi
src/: cheats.py  contracts.py  display_helpers.py  fonts.py  game.py  game_config.py  play_tests.py  player_limits.py  player_model.py  player_storage_sqlite.py  secret_levels.py  session_state.py  settings.cfg  user_settings.py  version_info.json  versioning.py
src/.codex/: config.toml
src/gfx/psds/: defense_drone_colors.psd  pod.psd  turret_colors.psd
src/lessons/: audio.py  generic_intro.py  generic_mission.py  key_render.py  keyboard_learning_order_2_keys_at_a_time.md  lesson_config.py  mission_engine.py  secret_level.py
src/lessons/lesson_1/: lesson_1_instructions.txt  lesson_1_intro.py  lesson_1_intro.txt  lesson_1_mission.py  mission_hints_l1.json
src/lessons/lesson_10/: lesson_10_instructions.txt  lesson_10_intro.py  (+2 more)
tests/: test_cheats.py  test_contracts.py  test_game_storage.py  test_mission_mechanics.py  test_player_model.py
tools/: prepare_alpha_build.py
(+141 files in other folders)
