[project]
name = "type-fighter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "kokoro>=0.9.4",
    "nuitka>=4.1.3",
    "piper-tts>=1.4.2",
    "pygame>=2.6.1",
    "pygbag>=0.9.3",
    "pykokoro>=0.6.5",
    "pyttsx3>=2.99",
    "soundfile>=0.14.0",
    "spacy>=3.8.14",
]
